# web_slinger

./: Cargo.toml
src/: main.rs
test_website/: index.html
web_slinger/: Cargo.toml
web_slinger/src/: collider_import.rs  color_picker.rs  main.rs  physics.rs  rope_shooting.rs  timer.rs
web_slinger_extension/: hello.html  manifest.json
web_slinger_extension/scripts/: background.js  content.js
web_slinger_extension/test/assets/: boss.aseprite  death.messages.json  game.data.json  ground.kra  hero.ase  light.png-autosave.kra  pile.png-autosave.kra
web_slinger_extension/test/assets/stone/: stone.kra
