[package]
name = "web_slinger"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.2"
bevy_wasm_window_resize = { git = "https://github.com/Leinnan/bevy_wasm_window_resize.git" }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
serde = "1.0.217"
serde-wasm-bindgen = "0.6.5"
once_cell = "1.20.3"
regex = "1.11.1"

[profile.release]
opt-level = 3
